--- a/index.html
+++ b/index.html
@@ -7,10 +7,9 @@
 </head>
 <body>
 
-<div id="controls">
-  <button id="reset">Reset</button>
-  <button id="rotate">Rotate</button>
-  <button id="flip">Flip</button>
+<div id="hud">
+  <span id="timer">00:00</span>
+  <button id="resetBtn">Reset</button>
 </div>
 
 <div id="game">
