Update index.html with calendar integration

--- a/index.html
+++ b/index.html
@@ -4,12 +4,17 @@
   <meta charset="UTF-8" />
   <title>Caesar’s Calendar – Prototype</title>
   <link rel="stylesheet" href="styles.css" />
+  <link rel="stylesheet" href="calendar.css" />
 </head>
 <body>
 
 <div id="hud">
-  <span id="timer">00:00</span>
+  <div class="calendar inactive"> 
+      <input id="calendar-input" class="calendar-input " placeholder="mm/dd/yy" type="text" value="" readonly>
+      <img id="cal-img" class="cal-img" src="./calendar.png">
+  </div>
   <button id="resetBtn">Reset</button>
+  <span id="timer">00:00</span>
 </div>
 
 <div id="game">
@@ -17,6 +22,7 @@
   <div id="tray"></div>
 </div>
 
+<script src="calendar.js"></script>
 <script src="app.js"></script>
 </body>
 </html>
